# ===================================================================
# ym-bfo のための CMakeLists.txt
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( c++-test )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( bfo_SOURCES
  src/AlgMgr.cc
  src/AlgKernelGen.cc
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
ym_add_object_library ( ym_bfo
  ${bfo_SOURCES}
  )
