# ===================================================================
# ym-bfo のための CMakeLists.txt
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

include_directories (
  ${PROJECT_SOURCE_DIR}/ym-common/include
  ${PROJECT_SOURCE_DIR}/ym-base/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( c++-test )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( bfo_SOURCES
  src/AlgMgr.cc
  src/AlgKernelGen.cc
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
ym_add_object_library ( ym_bfo
  ${bfo_SOURCES}
  )
